fix: homepage image overflow and header buttons spacing

--- a/frontend/src/styles/homepage/index.module.css
+++ b/frontend/src/styles/homepage/index.module.css
@@ -11,7 +11,6 @@
     padding: 0px 60px;
     width: 100%;
 
-
     position: absolute;
 
     left: 0px;
@@ -82,12 +81,15 @@
 .hero {
     width: 100%;
     height: 387px;
+
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    overflow: hidden;
+
     position: absolute;
     top: 80px;
-    flex-direction: column;
     margin-bottom: 30px;
     background: linear-gradient(180deg, rgba(0, 0, 0, 0.29) 0%, #000000 100%);
 }
